--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,11 @@
       <scope>test</scope>
     </dependency>
     <dependency>
+    <groupId>mysql</groupId>
+    <artifactId>mysql-connector-java</artifactId>
+    <version>6.0.6</version>
+    </dependency> 
+    <dependency>
     <groupId>org.seleniumhq.selenium</groupId>
     <artifactId>selenium-htmlunit-driver</artifactId>
     <version>2.52.0</version>
