--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,12 @@
     <groupId>mysql</groupId>
     <artifactId>mysql-connector-java</artifactId>
     <version>6.0.6</version>
-    </dependency> 
+    </dependency>
+    <dependency>
+    <groupId>org.postgresql</groupId>
+    <artifactId>postgresql</artifactId>
+    <version>9.2-1003-jdbc4</version>
+    </dependency>
     <dependency>
     <groupId>org.seleniumhq.selenium</groupId>
     <artifactId>selenium-htmlunit-driver</artifactId>
