--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -15,6 +15,18 @@
   </servlet-mapping>
   
   <welcome-file-list>
+    <welcome-file>avnhomepage.jsp</welcome-file>
+  </welcome-file-list>
+  <servlet>
+    <servlet-name>viewticket</servlet-name>
+    <servlet-class>servlet.viewticket</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>viewticket</servlet-name>
+    <url-pattern>/viewticket.do</url-pattern>
+  </servlet-mapping>
+  
+  <welcome-file-list>
     <welcome-file>avncreatepage.jsp</welcome-file>
   </welcome-file-list>
   <servlet>
