--- a/pom.xml
+++ b/pom.xml
@@ -44,7 +44,7 @@
     <sourceDirectory>src</sourceDirectory>
     <plugins>
       <plugin>
-        <artifactId>maven-war-plugin</artifactId>
+        <artifactId>maven-jar-plugin</artifactId>
         <version>2.4</version>
         <configuration>
           <warSourceDirectory>WebContent</warSourceDirectory>
