--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
   <groupId>WEBPOC</groupId>
   <artifactId>AVNCommunication</artifactId>
   <packaging>war</packaging>
-  <version>0.0.1-SNAPSHOT</version>
+  <version>1.0</version>
   <name>AVNCommunication Maven Webapp</name>
   <url>http://maven.apache.org</url>
   <dependencies>
