--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,12 @@
 	<version>1.0</version>
 	<name>AVNCommunication Maven Webapp</name>
 	<url>http://maven.apache.org</url>
+	<properties>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <sonar.language>java</sonar.language>
+    <sonar.login>admin</sonar.login>
+    <sonar.password>password</sonar.password>
+  </properties>
 	
 	<dependencies>
 		<dependency>
