--- a/deployment.yaml
+++ b/deployment.yaml
@@ -23,6 +23,8 @@ apiVersion: v1
 kind: Service
 metadata:
   name: squad8-svc
+  annotations:
+    service.beta.kubernetes.io/aws-load-balancer-type: nlb-ip
   labels:
     app: myapp
 spec:
