--- a/deployment.yaml
+++ b/deployment.yaml
@@ -15,7 +15,7 @@ spec:
     spec:
       containers:
       - name: myapp
-        image: wolfen/devops
+        image: wolfen/devops:latest
         ports:
         - containerPort: 8080
 ---
